--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 vaadin.launch-browser=true
 gg.jte.development-mode=true
+spring.cloud.config.enabled=false
 spring.application.name=carsharingapplication
+
