--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ vaadin.launch-browser=true
 gg.jte.development-mode=true
 spring.cloud.config.enabled=false
 spring.application.name=carsharingapplication
-
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
