Added Swagger UI

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Swaggy Swag Swag-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
